# generating_small_sentences

./: .gitignore  README.md  pyproject.toml
gen_names/: __init__.py  config.py  data.py  generators.py  train.py
gen_names/conf/: config.yaml
gen_names/conf/model/: lstm.yaml  mamba.yaml  transformer.yaml  true_mamba.yaml
gen_names/conf/scheduler/: reduce_plateau.yaml
gen_names/models/: lstm.py  mamba.py  shell.py  transformer.py  true_model.py
tests/: hydra_tests.py  mdl.ipynb  test.py  test_true_and_my_mamba.py  vca_test.py
weights/: lstm.ckpt  mamba_true.ckpt  transformer.ckpt
